# Lap-trinh-ung-dung-Chat-GUI-via-TCP

./: README.md
Code/: CMakeLists.txt  README.md
Code/Client/: client.cpp
Code/Gui/GuiClient/: gui_client.cpp
Code/Gui/Guiserver/: gui_server.cpp
Code/Server/: server.cpp
Code/Shared/: Protocol.cpp  Protocol.h  main.cpp
DOCX/: Lập trình ứng dụng chat Gui Via TCP.docx  README.md
Extra/: README.md
PPTX/: Link Canva thuyết trình.docx  README.md
